Изменён setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,4 +8,8 @@ exclude =
     env/
 per-file-ignores =
     */settings.py:E501
+    ./reviews/admin.py:I005
+    ./reviews/admin.py:I001
+    ./api_yamdb/urls.py:I005
+    ./api_yamdb/urls.py:I001
 max-complexity = 10
