--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -22,7 +22,8 @@ jobs:
 
     - name: Test with flake8 and django tests
       run: |
-        python -m flake8 
+        python -m flake8
+        pytest
 #   # Собрать и отправить образ приложения на DockerHub
 #   build:
 #     runs-on: ubuntu-latest
