--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,7 @@
 [flake8]
 ignore =
-    W503
+    W503,
+    I005
 exclude =
     tests/,
     */migrations/,
@@ -8,8 +9,6 @@ exclude =
     env/
 per-file-ignores =
     */settings.py:E501
-    ./reviews/admin.py:I005
-    ./reviews/admin.py:I001
-    ./api_yamdb/urls.py:I005
-    ./api_yamdb/urls.py:I001
+    */reviews/admin.py:I001
+    */api_yamdb/urls.py:I001
 max-complexity = 10
