--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -51,7 +51,7 @@ jobs:
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USER }}
-          key: ${{ secrets.SSH_KEY }}
+          key: ${{ secrets.SSH_KEY }} # update
           passphrase: ${{ secrets.PASSPHRASE }}
           script: |
             sudo docker-compose stop
