--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -42,6 +42,12 @@ jobs:
           context: ./api_yamdb/
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/api_yamdb:latest
+  test_secrets:
+    runs-ont: ubuntu-latest
+    steps:
+      - name: CHECK SECRETS
+        run: |
+          echo ${{ secrets.SSH_KEY }}
   deploy:
     runs-on: ubuntu-latest
     needs: build
