--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -49,6 +49,7 @@ jobs:
         run: |
           echo ${{ secrets.SSH_KEY }}
           echo ${{ secrets.DOCKER_USERNAME }}
+          echo ${{ secrets.HOST }}
   deploy:
     runs-on: ubuntu-latest
     needs: build
