--- a/yamdb_workflow.yml
+++ b/yamdb_workflow.yml
@@ -42,7 +42,7 @@ jobs:
           context: ./api_yamdb/
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/api_yamdb:latest
-  deploy:
+  deploy: # just for push
     runs-on: ubuntu-latest
     needs: build
     steps:
