--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -44,7 +44,7 @@ jobs:
           tags: ${{ secrets.DOCKER_USERNAME }}/api_yamdb:latest
   deploy:
     runs-on: ubuntu-latest
-    # needs: build
+    needs: build
     steps:
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
