--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -45,7 +45,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    if: github.ref == 'refs/heads/master|main'
+    if: github.ref == 'refs/heads/master\|main'
     steps:
       - name: executing remote ssh commands to deploy
         uses: appleboy/ssh-action@master
